force-app/main/default/objects/T_Invoice__c/T_Invoice__c.object-meta.xml
<CustomObject>
    <label>T_Invoice</label>
    <nameField>
        <label>T_Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>