force-app/main/default/objects/T_Invoice__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>T_Invoices</relationshipLabel>
    <relationshipName>T_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>