force-app/main/default/objects/T_Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>T_Invoices</relationshipLabel>
    <relationshipName>T_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>